[gd_scene load_steps=33 format=3 uid="uid://c40rctnulgplc"]

[ext_resource type="Script" uid="uid://bttbv575rxawo" path="res://Platforms/scripts/fan_blade.gd" id="1_adxky"]
[ext_resource type="Texture2D" uid="uid://cfi7cry8v0h62" path="res://Assets/platforms/Weapons/fan-sprite.png" id="2_s0a8y"]
[ext_resource type="Texture2D" uid="uid://cxriubbaxlfpv" path="res://Assets/platforms/Gears/1.png" id="2_yu12i"]
[ext_resource type="Texture2D" uid="uid://nkqj0insxso5" path="res://Assets/platforms/Gears/2.png" id="3_g2o3r"]
[ext_resource type="Texture2D" uid="uid://dq6al1uhi7ote" path="res://Assets/platforms/Gears/3.png" id="4_atqmb"]
[ext_resource type="Texture2D" uid="uid://d3s1am4vbmmpj" path="res://Assets/platforms/Gears/4.png" id="5_51ic7"]
[ext_resource type="Texture2D" uid="uid://58g131lxl43l" path="res://Assets/platforms/Gears/5.png" id="6_je2bs"]
[ext_resource type="Texture2D" uid="uid://dkuy6ulhd1mik" path="res://Assets/platforms/Gears/6.png" id="7_wa0fk"]
[ext_resource type="Texture2D" uid="uid://ceeako02pxml1" path="res://Assets/platforms/Gears/7.png" id="8_ealbj"]
[ext_resource type="Texture2D" uid="uid://bpx3w7jew5m2c" path="res://Assets/platforms/Gears/8.png" id="9_2d6os"]
[ext_resource type="Texture2D" uid="uid://cxm83xfecysej" path="res://Assets/platforms/Gears/9.png" id="10_hxcqv"]
[ext_resource type="Texture2D" uid="uid://c2nx1pbeoayhi" path="res://Assets/platforms/Gears/10.png" id="11_v32sp"]
[ext_resource type="Texture2D" uid="uid://bt1mpdv63dckt" path="res://Assets/platforms/Gears/11.png" id="12_61y0n"]
[ext_resource type="Texture2D" uid="uid://dec752rif58cc" path="res://Assets/platforms/Gears/12.png" id="13_t5luc"]
[ext_resource type="Texture2D" uid="uid://tciig8gw3b17" path="res://Assets/platforms/Gears/13.png" id="14_qpbnb"]
[ext_resource type="Texture2D" uid="uid://7f2xhuuq5evw" path="res://Assets/platforms/Gears/14.png" id="15_y18ts"]
[ext_resource type="Texture2D" uid="uid://bcd1wkaiyurd" path="res://Assets/platforms/Gears/15.png" id="16_qqaub"]
[ext_resource type="Texture2D" uid="uid://bednmkxybft6g" path="res://Assets/platforms/Gears/16.png" id="17_c242u"]
[ext_resource type="Shader" uid="uid://cm30ghxsl8exq" path="res://Shaders/blackandwhite.gdshader" id="18_qri8p"]
[ext_resource type="Texture2D" uid="uid://ccvbuud12l3oo" path="res://Assets/platforms/Weapons/WR_NightBoundSet_Spritesheet.png" id="19_adxky"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymf83"]
shader = ExtResource("18_qri8p")

[sub_resource type="SpriteFrames" id="SpriteFrames_txbly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yu12i")
}, {
"duration": 1.0,
"texture": ExtResource("3_g2o3r")
}, {
"duration": 1.0,
"texture": ExtResource("4_atqmb")
}, {
"duration": 1.0,
"texture": ExtResource("5_51ic7")
}, {
"duration": 1.0,
"texture": ExtResource("6_je2bs")
}, {
"duration": 1.0,
"texture": ExtResource("7_wa0fk")
}, {
"duration": 1.0,
"texture": ExtResource("8_ealbj")
}, {
"duration": 1.0,
"texture": ExtResource("9_2d6os")
}, {
"duration": 1.0,
"texture": ExtResource("10_hxcqv")
}, {
"duration": 1.0,
"texture": ExtResource("11_v32sp")
}, {
"duration": 1.0,
"texture": ExtResource("12_61y0n")
}, {
"duration": 1.0,
"texture": ExtResource("13_t5luc")
}, {
"duration": 1.0,
"texture": ExtResource("14_qpbnb")
}, {
"duration": 1.0,
"texture": ExtResource("15_y18ts")
}, {
"duration": 1.0,
"texture": ExtResource("16_qqaub")
}, {
"duration": 1.0,
"texture": ExtResource("17_c242u")
}],
"loop": true,
"name": &"Spin",
"speed": 60.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qri8p"]
shader = ExtResource("18_qri8p")

[sub_resource type="AtlasTexture" id="AtlasTexture_hqkfo"]
atlas = ExtResource("2_s0a8y")
region = Rect2(0, 0, 610, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeqsd"]
atlas = ExtResource("2_s0a8y")
region = Rect2(0, 88, 610, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eh3v"]
atlas = ExtResource("2_s0a8y")
region = Rect2(0, 176, 610, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmsrf"]
atlas = ExtResource("2_s0a8y")
region = Rect2(0, 264, 610, 88)

[sub_resource type="SpriteFrames" id="SpriteFrames_v7h7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqkfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeqsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eh3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmsrf")
}],
"loop": true,
"name": &"Spin",
"speed": 30.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_adxky"]
shader = ExtResource("18_qri8p")

[sub_resource type="SpriteFrames" id="SpriteFrames_ymf83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yu12i")
}, {
"duration": 1.0,
"texture": ExtResource("3_g2o3r")
}, {
"duration": 1.0,
"texture": ExtResource("4_atqmb")
}, {
"duration": 1.0,
"texture": ExtResource("5_51ic7")
}, {
"duration": 1.0,
"texture": ExtResource("6_je2bs")
}, {
"duration": 1.0,
"texture": ExtResource("7_wa0fk")
}, {
"duration": 1.0,
"texture": ExtResource("8_ealbj")
}, {
"duration": 1.0,
"texture": ExtResource("9_2d6os")
}, {
"duration": 1.0,
"texture": ExtResource("10_hxcqv")
}, {
"duration": 1.0,
"texture": ExtResource("11_v32sp")
}, {
"duration": 1.0,
"texture": ExtResource("12_61y0n")
}, {
"duration": 1.0,
"texture": ExtResource("13_t5luc")
}, {
"duration": 1.0,
"texture": ExtResource("14_qpbnb")
}, {
"duration": 1.0,
"texture": ExtResource("15_y18ts")
}, {
"duration": 1.0,
"texture": ExtResource("16_qqaub")
}, {
"duration": 1.0,
"texture": ExtResource("17_c242u")
}],
"loop": true,
"name": &"Spin",
"speed": 60.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adxky"]
size = Vector2(61, 32)

[sub_resource type="Gradient" id="Gradient_adxky"]
offsets = PackedFloat32Array(0, 0.995536)
colors = PackedColorArray(1, 1, 1, 0.00784314, 1, 1, 1, 0.827451)

[node name="FanBlade" type="Node2D"]
script = ExtResource("1_adxky")

[node name="Parent" type="Node2D" parent="."]
position = Vector2(-1, -1)
rotation = 1.5708

[node name="LeverStick" type="Sprite2D" parent="Parent"]
material = SubResource("ShaderMaterial_ymf83")
position = Vector2(56, -1)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("19_adxky")
offset = Vector2(0, 15)
region_enabled = true
region_rect = Rect2(212.864, 105.792, 8.20187, 38.4047)

[node name="LeverStick2" type="Sprite2D" parent="Parent"]
material = SubResource("ShaderMaterial_ymf83")
position = Vector2(55, -31)
scale = Vector2(2, 2)
texture = ExtResource("19_adxky")
offset = Vector2(0, 15)
region_enabled = true
region_rect = Rect2(212.864, 105.792, 8.20187, 38.4047)

[node name="Gear" type="AnimatedSprite2D" parent="Parent"]
modulate = Color(0.717647, 0.701961, 0.615686, 1)
position = Vector2(56, -1)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_txbly")
animation = &"Spin"
frame_progress = 0.160395

[node name="Fan" type="AnimatedSprite2D" parent="Parent"]
modulate = Color(0.678431, 0.466667, 0.341176, 1)
material = SubResource("ShaderMaterial_qri8p")
position = Vector2(-6, -2)
rotation = -1.5708
scale = Vector2(0.0991526, 0.148)
sprite_frames = SubResource("SpriteFrames_v7h7o")
animation = &"Spin"
frame_progress = 0.794063

[node name="Extra" type="Node2D" parent="Parent"]
position = Vector2(54.9996, -99.0002)
rotation = 3.14159

[node name="LeverStick3" type="Sprite2D" parent="Parent/Extra"]
material = SubResource("ShaderMaterial_adxky")
position = Vector2(-1.52588e-05, 64)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("19_adxky")
offset = Vector2(0, 15)
region_enabled = true
region_rect = Rect2(212.864, 105.792, 8.20187, 38.4047)

[node name="LeverStick4" type="Sprite2D" parent="Parent/Extra"]
material = SubResource("ShaderMaterial_adxky")
position = Vector2(-0.999985, 3.05176e-05)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("19_adxky")
offset = Vector2(0, 15)
region_enabled = true
region_rect = Rect2(212.864, 105.792, 8.20187, 38.4047)

[node name="LeverStick5" type="Sprite2D" parent="Parent/Extra"]
material = SubResource("ShaderMaterial_adxky")
position = Vector2(0, -64)
scale = Vector2(2, 2)
texture = ExtResource("19_adxky")
offset = Vector2(0, 15)
region_enabled = true
region_rect = Rect2(212.864, 105.792, 8.20187, 38.4047)

[node name="Gear2" type="AnimatedSprite2D" parent="Parent/Extra"]
modulate = Color(0.717647, 0.701961, 0.615686, 1)
position = Vector2(1.00002, -0.999969)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ymf83")
animation = &"Spin"

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_adxky")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-2, -27)
emitting = false
amount = 60
lifetime = 5.0
preprocess = 2.0
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(50, 1)
gravity = Vector2(0, -980)
scale_amount_min = 20.0
scale_amount_max = 20.0
color_ramp = SubResource("Gradient_adxky")
